# gun_shield_elements

./: .gitignore  Cargo.toml
.cursor/rules/: bevy-game.mdc
src/: main.rs  resources.rs  states.rs
src/components/: boundary.rs  mod.rs  player.rs  ui.rs
src/components/attributes/: collider.rs  collision_damage.rs  energy.rs  health.rs  invulnerability.rs  mod.rs  speed.rs
src/components/entities/: boss.rs  mod.rs  player.rs  weapon.rs
src/constants/: boundaries.rs  colors.rs  mod.rs
src/plugins/: debug_plugin.rs  game_over_plugin.rs  game_plugin.rs  menu_plugin.rs  mod.rs
src/systems/: boss_systems.rs  boundary.rs  menu_systems.rs  mod.rs  pause_systems.rs  player_death.rs  player_systems.rs  ui_systems.rs  weapon_systems.rs
src/systems/camera/: camera_follow.rs  mod.rs
src/systems/movement/: mod.rs  player_movement.rs  shield_system.rs
src/systems/spawning/: boss_spawning.rs  mod.rs  player_spawning.rs
src/systems/ui/: boss_health_ui.rs  energy_ui.rs  health_ui.rs  mod.rs
